# lottery_prediction

./: README.md  pyproject.toml
qlc/: README.md  number_utils.py  prepare_data.py  train_lstm.py  train_makov.py  yijing_utils.py
qlc/data/: 1.csv  prepared_test_data.csv  prepared_traning_data.csv  row_data.csv
test/: test _mako.py
